[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Objects/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Objects/Player/Sprites/sprite.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/Player/Sprites/healthbar.png" type="Texture" id=3]
[ext_resource path="res://src/Objects/Player/Sprites/shield.png" type="Texture" id=4]
[ext_resource path="res://src/Objects/Player/Sprites/spikes.png" type="Texture" id=5]
[ext_resource path="res://src/Objects/Player/Animations/AttackUp.tres" type="Animation" id=6]
[ext_resource path="res://src/Objects/Player/Animations/Invincible.tres" type="Animation" id=7]
[ext_resource path="res://src/Objects/Player/ShieldUp.tres" type="Animation" id=8]
[ext_resource path="res://src/Objects/Player/hurt.wav" type="AudioStream" id=9]
[ext_resource path="res://src/Objects/Player/dash.wav" type="AudioStream" id=10]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 20.0

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 4, 24 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 11, 27 )

[node name="Player" type="KinematicBody2D" index="0"]

pause_mode = 2
input_pickable = false
collision_layer = 2
collision_mask = 31
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pause", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Torso" type="Position2D" parent="." index="2"]

[node name="Healthbar" type="TextureProgress" parent="Torso" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -45.0
margin_top = 25.0
margin_right = -20.0
margin_bottom = 35.0
rect_rotation = -90.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 3.0
step = 1.0
page = 0.0
value = 3.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Shield" type="Area2D" parent="Torso" index="1"]

position = Vector2( -4, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Shield" index="0"]

position = Vector2( 36, 0 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Torso/Shield" index="1"]

position = Vector2( 4, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Weapon" type="Area2D" parent="Torso" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
collision_layer = 0
collision_mask = 12
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Weapon" index="0"]

position = Vector2( 8, 0 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Torso/Weapon" index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Margin" type="Area2D" parent="Torso" index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Margin" index="0"]

position = Vector2( 29, 0 )
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Label" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -24.0
margin_top = -40.0
margin_right = 16.0
margin_bottom = -26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DashTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="DashCDTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/attackup = ExtResource( 6 )
anims/invincible = ExtResource( 7 )
anims/shieldup = ExtResource( 8 )
blend_times = [  ]

[node name="InvincPlayer" type="AnimationPlayer" parent="." index="8"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Invincible = ExtResource( 7 )
blend_times = [  ]

[node name="Hurt" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 9 )
volume_db = -30.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Sound"

[node name="Dash" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 10 )
volume_db = -30.0
pitch_scale = 2.0
autoplay = false
mix_target = 0
bus = "Sound"

[connection signal="area_entered" from="Torso/Weapon" to="." method="_on_Weapon_area_entered"]

[connection signal="body_entered" from="Torso/Margin" to="." method="_on_Margin_body_entered"]

[connection signal="body_exited" from="Torso/Margin" to="." method="_on_Margin_body_exited"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]

[connection signal="timeout" from="DashCDTimer" to="." method="_on_DashCDTimer_timeout"]


